--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "schaaldesign/wp-timber-theme",
   "version": "0.1",
+  "type": "wordpress-theme",
   "dist": {
       "url": "https://github.com/sebahub/wp-timber-starter-theme",
       "type": "git"
